add STL support and service hook

--- a/HyperPlatform/HyperPlatform.vcxproj
+++ b/HyperPlatform/HyperPlatform.vcxproj
@@ -68,16 +68,18 @@
     <ClCompile Include="driver.cpp" />
     <ClCompile Include="ept.cpp" />
     <ClCompile Include="FakePage.cpp" />
-    <ClCompile Include="global_object.cpp" />
     <ClCompile Include="hotplug_callback.cpp" />
     <ClCompile Include="include\exclusivity.cpp" />
+    <ClCompile Include="include\global.cpp" />
+    <ClCompile Include="include\initsect.cpp" />
+    <ClCompile Include="include\string.cpp" />
     <ClCompile Include="kernel-hook\khook\hde\hde32.cpp" />
     <ClCompile Include="kernel-hook\khook\hde\hde64.cpp" />
     <ClCompile Include="kernel-hook\khook\khook\hk.c" />
-    <ClCompile Include="kernel_stl.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="performance.cpp" />
     <ClCompile Include="power_callback.cpp" />
+    <ClCompile Include="service_hook.cpp" />
     <ClCompile Include="systemcall.cpp" />
     <ClCompile Include="util.cpp" />
     <ClCompile Include="vm.cpp" />
@@ -93,6 +95,11 @@
     <ClInclude Include="hotplug_callback.h" />
     <ClInclude Include="ia32_type.h" />
     <ClInclude Include="include\exclusivity.h" />
+    <ClInclude Include="include\global.hpp" />
+    <ClInclude Include="include\sect_attribs.h" />
+    <ClInclude Include="include\string.hpp" />
+    <ClInclude Include="include\type_traits.hpp" />
+    <ClInclude Include="include\vector.hpp" />
     <ClInclude Include="include\write_protect.h" />
     <ClInclude Include="kernel-hook\khook\hde\hde.h" />
     <ClInclude Include="kernel-hook\khook\hde\hde32.h" />
@@ -106,6 +113,7 @@
     <ClInclude Include="performance.h" />
     <ClInclude Include="perf_counter.h" />
     <ClInclude Include="power_callback.h" />
+    <ClInclude Include="service_hook.h" />
     <ClInclude Include="settings.h" />
     <ClInclude Include="systemcall.h" />
     <ClInclude Include="util.h" />
