--- a/HyperPlatform/HyperPlatform.vcxproj
+++ b/HyperPlatform/HyperPlatform.vcxproj
@@ -71,6 +71,7 @@
     <ClCompile Include="hotplug_callback.cpp" />
     <ClCompile Include="include\exclusivity.cpp" />
     <ClCompile Include="include\global.cpp" />
+    <ClCompile Include="include\handle.cpp" />
     <ClCompile Include="include\initsect.cpp" />
     <ClCompile Include="include\string.cpp" />
     <ClCompile Include="kernel-hook\khook\hde\hde32.cpp" />
@@ -96,6 +97,7 @@
     <ClInclude Include="ia32_type.h" />
     <ClInclude Include="include\exclusivity.h" />
     <ClInclude Include="include\global.hpp" />
+    <ClInclude Include="include\handle.h" />
     <ClInclude Include="include\sect_attribs.h" />
     <ClInclude Include="include\string.hpp" />
     <ClInclude Include="include\type_traits.hpp" />
