--- a/HyperPlatform/HyperPlatform.vcxproj
+++ b/HyperPlatform/HyperPlatform.vcxproj
@@ -60,11 +60,13 @@
       <TreatWarningAsError Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</TreatWarningAsError>
       <TreatWarningAsError Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</TreatWarningAsError>
     </ClCompile>
+    <Link />
   </ItemDefinitionGroup>
   <ItemGroup>
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="device.cpp" />
     <ClCompile Include="driver.cpp" />
     <ClCompile Include="ept.cpp" />
     <ClCompile Include="FakePage.cpp" />
@@ -89,6 +91,7 @@
   <ItemGroup>
     <ClInclude Include="asm.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="device.h" />
     <ClInclude Include="driver.h" />
     <ClInclude Include="ept.h" />
     <ClInclude Include="FakePage.h" />
