--- a/HyperPlatform/HyperPlatform.vcxproj
+++ b/HyperPlatform/HyperPlatform.vcxproj
@@ -39,6 +39,9 @@
     <DriverTargetPlatform>Desktop</DriverTargetPlatform>
     <DriverType>WDM</DriverType>
   </PropertyGroup>
+  <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Driver_SpectreMitigation>false</Driver_SpectreMitigation>
+  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings" />
   <ImportGroup Label="PropertySheets">
@@ -102,6 +105,7 @@
     <ClInclude Include="device.h" />
     <ClInclude Include="driver.h" />
     <ClInclude Include="ept.h" />
+    <ClInclude Include="error_bugcheck.h" />
     <ClInclude Include="FakePage.h" />
     <ClInclude Include="global_object.h" />
     <ClInclude Include="hotplug_callback.h" />
